--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,38 @@
 	background-image: url("./images/greece1.jpeg");
 } */
 
+table {
+	width: 100%;
+	border-spacing: 5px;
+}
+
+table,
+th,
+td {
+	border: 1px solid black;
+}
+
+button {
+	width: 150px;
+	height: 40px;
+	color: white;
+	margin-top: 5px;
+	font-weight: bold;
+}
+
+.submit {
+	background-color: blue;
+}
+
+.special {
+	background-color: crimson;
+}
+
+#zip {
+	height: 40px;
+	font-weight: 300;
+}
+
 @media (prefers-reduced-motion: no-preference) {
 	.App-logo {
 		animation: App-logo-spin infinite 20s linear;
